# AnalizadorLexico

./: .gitignore  Analizador.dev  CMakeLists.txt  Comentarios.c  Comentarios.h  FileUtils.c  FileUtils.h  Identificador.c  Identificador.h  Numeros.c  Numeros.h  Operadores.c  Operadores.h  Otros.c  Otros.h  Reservadas.c  Reservadas.h  Separadores.c  Separadores.h  main.c
